# torchsparse

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.Rmd  README.md
.github/workflows/: R-CMD-check.yaml
R/: RcppExports.R  package.R
csrc/: CMakeLists.txt
csrc/include/torchsparse/: exports.h  torchsparse.h  torchsparse_types.h
csrc/src/: exports.cpp  torchsparse.cpp  torchsparse.def  torchsparse_types.cpp
inst/def/: torchsparse.def
inst/include/torchsparse/: exports.h  torchsparse.h
src/: Makevars.win  RcppExports.cpp  exports.cpp  exports.h  torchsparse.cpp  torchsparse_types.cpp  torchsparse_types.h
tests/: testthat.R
tests/testthat/: test-namespace.R  test-torchsparse.R  test-wrappers.R
